Fix overflow in sign-up and login pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,10 +22,13 @@
   background-color: #36302e;
 }
 
-nav {
-  margin: auto -17px;
+// nav {
+//   margin: auto -17px;
+// }
+.remove-padding {
+  padding-right: 0;
+  padding-left: 0;
 }
-
 nav a {
   color: #36302e;
 }
@@ -73,19 +76,19 @@ footer {
 }
 
 .section_for_articles {
-  margin-top: 65px;
+  // margin-top: 65px;
   height: 100vh;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: -15px;
-  margin-right: -15px;
+  // padding-left: 15px;
+  // padding-right: 15px;
+  // margin-left: -15px;
+  // margin-right: -15px;
 }
 
 .home {
-  margin: 55px -12px 0 -14px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 10px;
+  // margin: 55px -12px 0 -14px;
+  // padding-left: 15px;
+  // padding-right: 15px;
+  // padding-bottom: 10px;
 }
 
 .img-fluid {
@@ -165,9 +168,9 @@ footer {
 
 .article_page {
   height: 100vh;
-  padding-left: 25px;
-  padding-right: 25px;
-  margin-left: -15px;
-  margin-right: -15px;
-  margin-top: 59px;
+  // padding-left: 25px;
+  // padding-right: 25px;
+  // margin-left: -15px;
+  // margin-right: -15px;
+  // margin-top: 59px;
 }
